deployment/helm/jarvis/api-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jarvis-service
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: jarvis-api
