deployment/helm/jarvis/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: jarvis-api-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jarvis-vs
spec:
  hosts:
  - "*"
  gateways:
  - jarvis-api-gateway
  http:
  - match:
    - uri:
        prefix: /analysis
    - uri:
        prefix: /v1
    - uri:
        prefix: /live
    - uri:
        prefix: /ready
    - uri:
        prefix: /swagger
    - uri:
        prefix: /swagger-ui
    route:
    - destination:
        host: jarvis-service
        port:
          number: 8080
    corsPolicy:
      allowOrigin:
        - '*'
